20040711 get_default and set_default handle arrays with $; but not used yet
20040714 1.22 remove timeout for returning ESC (it fails on Fedora xterm)
20040720 1.23 @marked gets correctly reset at each invocation of &choose
20040801 1.24 &edit checks in initial RCS version correctly
20040809 1.25 'tput lines' tried before 'tput rows' for all OSs
20041016 1.26 Install offers default locations as default to first-time users
20041021 1.27 &choose handles multi-line question text
20041107 1.28 EXPORT_OK routines documented and ALL tag defined
20041208 1.29 ^C at the "give me a clue" prompt works like "q to quit"
20050121 1.30 test.pl uses Test::Simple
20050831 1.31 test.pl uses warnings; oct/chr/ord confusion fixed in Clui.pm
20050911 1.32 FileSelect.pm fix "sort interpreted as function" warning
20050914 1.33 FileSelect.pm fix sort bug in line 90
20050915 1.34 FileSelect.pm -Directory option; bugfix when -Chdir=-SelDir=0
20050928 1.35 FileSelect.pm returns correct var-type if q for quit
20060816 1.36 neater pod SYNOPSIS formatting, audio_stuff uses mpg123 for mp3
20061005 1.37 uses Term::ReadKey if available, rather than `stty`
20070309 1.38 choose with a long list asking for a clue offers ^X to quit
20070309 1.39 no change
20070511 1.40 removed spurious debug command: &puts("returned")
20090307 1.41 icol,irow managed by puts; Install removed; Py3 translation
20090928 1.42 fixed bug in &choose with items longer than screen-width
20091003 1.43 choose and inform use :encoding(utf8) when in a utf8 environment
20091104 1.44 ask() handles left-arrow at start of string
20100426 1.50 &choose supports mouse !! and utf8 clues supported
20100430 1.51 bug fixed: &ask accepts spaces
20100501 1.52 disable debugging :-)
20100502 1.53 TermClui.py does stty sane on return; bug fixed in audio_stuff
20100504 1.54 help_text() introduced; Delete works in ask; various bugs fixed
20100515 1.55 narrow_the_clue only leaves mouse-mode if we're in mouse-mode