@@ -46,3 +46,4 @@
 20100502 1.53 TermClui.py does stty sane on return; bug fixed in audio_stuff
 20100504 1.54 help_text() introduced; Delete works in ask; various bugs fixed
 20100515 1.55 narrow_the_clue only leaves mouse-mode if we're in mouse-mode
+20100516 1.56 ^C calls endwin and raises SIGINT
